# polytope

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ACKNOWLEDGEMENTS.rst  CONTRIBUTING.rst  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  encodedQTree  extra.css  indexTree.capnp  list_files.sh  mkdocs.yml  profiled_extract_quadtree.pstats  pyproject.toml  readme.md  requirements.txt  requirements_example.txt  serializedTree  setup.py  tox.ini
.github/: ci-config.yml  ci-hpc-config.yml
.github/workflows/: action.yaml  build-abi3-wheels.yml  cd.yml  ci-python-template.yaml  ci.yaml  ci.yml  donwstream-ci.yml  downstream-ci.yml  label-public-pr.yml  release.yaml  test-pypi.yml
benchmarks/: benchmark_dimension_box.py  benchmark_setup.py  benchmark_size_box.py
docs/: Makefile  extra.css  index.md  requirements.txt
docs/Client/: Overview.md
docs/Developer_Guide/: API.md  Axis_types.md  Datacube.md  Overview.md  Slicer.md  shapes.md
docs/Overview/: Overview.md  Polytope_at_ECMWF.md
docs/Service/: Data_Portfolio.md  Design_doc.md  Full_fields.md  Installation.md  Overview.md  Quick_Start.md
docs/User_Guide/: Building_features.md  Example.md  Getting_started.md  Overview.md
example_eo/: burnt_land_arizona_example.py  eo_sea_chloro_example.py  mangrove_cover_example.py  sea_ice_example.py  soil_moisture_example.py  tree_cover_example_Germany.py
example_mri/: example_mri.py  example_mri_as_path.py  test_plotly_3D_xarray.py
examples/: 3D_shipping_route.py  3D_shipping_route_str.py  3D_shipping_route_wave_model.py  4D_flight_path.py  box_around_germany.py  country_slicing.py  country_slicing_v2.py  cyclic_route_around_earth.py  healpix_grid_box_example.py  mediterranean_region.py  octahedral_grid_box_example.py  octahedral_grid_country_example.py  octahedral_grid_example.py  plotting_country_data.py  read_me_example.py  requirements_examples.txt  slicing_all_ecmwf_countries.py  timeseries_example.py  timeseries_point.py  vertical_profile_point.py  wind_farms.py
examples/data/: EMODnet_HA_WindFarms_pg_20220324.shp  EMODnet_HA_WindFarms_pg_20220324.shx  Shipping-Lanes-v1.shp  mars_req_9km_wind.req  mars_req_levels.req  mars_req_timeseries.req  ne_110m_land.shp  output4.grib  output4.req  output8.grib  output8.req  temp_model_levels.grib  timeseries_t2m.grib  winds.grib
newest-polytope-venv/: pyvenv.cfg
performance/: fdb_performance.py  fdb_performance_3D.py  fdb_scalability_plot.py  fdb_slice_many_numbers_timeseries.py  performance_many_num_steps.py  plotting_scalability.py  plotting_scalability_and_performance_stats.py  plotting_scalability_nicely.py  scalability_test.py  scalability_test_2.py  test_many_steps_and_numbers.py
performance_plots_fdb/: performance_plot_timeseries.py  performance_polytope_fdb_timeseries.py  performance_pyfdb_timeseries.py
performance_unstructured/: octahedral_vs_unstructured_slicing.py  plot_structured_vs_unstructured_slicing.py  unstructured_icon_grid_26.py  unstructured_icon_grid_26_boxes.py  unstructured_icon_grid_26_boxes_large_boxes.py  unstructured_icon_grid_26_circles.py  unstructured_icon_grid_26_circles_as_convex_poly.py  unstructured_vs_octahedral.py
polytope/: __init__.py  options.py  polygon_thresholds.py  polytope.py  shapes.py
polytope/datacube/: FDB_datacube.py  __init__.py  coupled_datacube_axes.py  datacube.py  datacube_axis.py  datacube_mappers.py  datacube_request_tree.py  datacube_transformations.py  index_tree.capnp  index_tree.proto  index_tree.py  index_tree_pb2.py  mappers.py  mock.py  octahedral_xarray.py  quad_tree.proto  quad_tree.py  quad_tree_encoding.py  quad_tree_pb2.py  tensor_index_tree.py  tree_encoding.py  tree_encoding_capnp.py  xarray.py
polytope/engine/: engine.py  hullslicer.py  quadtree_slicer.py  slicing_tools.py
polytope/utility/: combinatorics.py  engine_tools.py  exceptions.py  geometry.py  list_tools.py  profiling.py
polytope_feature/: __init__.py  _version.py  options.py  polytope.py  shapes.py
polytope_feature/datacube/: TODO  datacube_axis.py  index_tree_pb2.py  quad_tree.proto  quad_tree.py  quad_tree_encoder.py  quad_tree_pb2.py  quadtree_additional_operations.py  switching_grid_helper.py  switching_grid_local.py  switching_grid_service.py  tensor_index_tree.py  tree_encoding.py
polytope_feature/datacube/quadtree/: Cargo.toml  quad_tree.py  quadtree_additional_operations.py
polytope_feature/datacube/quadtree/src/: lambert_conformal.rs  lib.rs  lib_old.rs  main.rs  point_in_polygon.rs  quadtree_mod.rs  slicing_tools.rs
polytope_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rust/: Cargo.toml
rust/src/: distance.rs  geometry.rs  healpix_nested.rs  healpix_ring.rs  lambert_conformal.rs  lib.rs  list_tools.rs  octahedral.rs  point_in_polygon.rs  quadtree_mod.rs  reduced_gaussian.rs  regular.rs  slicing_tools.rs
rust/src/datacube/: datacube_axis.rs  mod.rs
rust/src/utility/: exceptions.rs
test_venv/: pyvenv.cfg
tests/: conftest.py  environment-ubuntu-3.7.yml  helper_functions.py  profiled_quadtree.profile  quadtree_slicer_profiler.py  requirements_test.txt  test_axis_mappers.py  test_bad_request_error.py  test_combinatorics.py  test_create_axis.py  test_cyclic_axis_over_negative_vals.py  test_cyclic_axis_slicer_not_0.py  test_cyclic_axis_slicing.py  test_cyclic_nearest.py  test_cyclic_simple.py  test_cyclic_snapping.py  test_datacube_axes_init.py  test_datacube_mock.py  test_datacube_xarray.py  test_date_time_unmerged.py  test_ecmwf_oper_data_fdb.py  test_engine_slicer.py  test_fdb_datacube.py  test_fdb_return_idx.py  test_fdb_unmap_tree.py  test_float_type.py  test_healpix_mapper.py  test_healpix_nested_grid.py  test_hull_slicer.py  test_hullslicer_engine.py  test_icon_grid_unstructured.py  test_icon_grid_unstructured_fdb.py  test_icon_grid_unstructured_fdb_cyclic.py  test_icon_grid_unstructured_fdb_point.py  test_incomplete_tree_fdb.py  test_lambert_lam_grid_unstructured_fdb.py  test_lambert_lam_grid_unstructured_fdb_optimised_quadtree.py  test_local_grid_cyclic.py  test_local_regular_grid.py  test_local_swiss_grid.py  (+65 more)
(+168 files in other folders)
