[package]
name = "polytope-python"
version = "0.0.0" # placeholder
edition = "2021"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
qhull = { git = "https://github.com/LucaCiucci/qhull-rs" }
rayon = "1.8"

[lib]
name = "quadtree"
path = "rust/lib.rs"
crate-type = ["cdylib"]
